@@ -1557,13 +1557,13 @@ namespace BDArmory.Bullets
                     pBullet.tgtRocket = tgtRocket;
                     pBullet.gameObject.SetActive(true);
 
-                // Tracers shouldn't really be drawn before the next frame, but not doing so results in them appearing as randomly oriented streaks and the parent bullet disappears on the same frame, so we draw them here and they appear to stutter for a frame (drawn ahead by 1 frame, then drawn in the same position as the FX catches up with the physics).
-                pBullet.SetTracerPosition();
+                    // Tracers shouldn't really be drawn before the next frame, but not doing so results in them appearing as randomly oriented streaks and the parent bullet disappears on the same frame, so we draw them here and they appear to stutter for a frame (drawn ahead by 1 frame, then drawn in the same position as the FX catches up with the physics).
+                    pBullet.SetTracerPosition();
 
-                if (pBullet.CheckBulletCollisions(iTime)) continue; // Bullet immediately hit something and died.
-                if (!hasRicocheted) pBullet.MoveBullet(iTime); // Move the bullet the remaining part of the frame.
-                pBullet.currentPosition += (TimeWarp.fixedDeltaTime - iTime) * BDKrakensbane.FrameVelocityV3f; // Re-adjust for Krakensbane.
-                pBullet.timeAlive = iTime;
+                    if (pBullet.CheckBulletCollisions(iTime)) continue; // Bullet immediately hit something and died.
+                    if (!hasRicocheted) pBullet.MoveBullet(iTime); // Move the bullet the remaining part of the frame.
+                    pBullet.currentPosition += (TimeWarp.fixedDeltaTime - iTime) * BDKrakensbane.FrameVelocityV3f; // Re-adjust for Krakensbane.
+                    pBullet.timeAlive = iTime;
                 }
             }
         }
