@@ -2818,7 +2818,7 @@ namespace BDArmory.UI
             {
                 WindowHeight += Mouse.delta.y / BDArmorySettings.UI_SCALE;
                 WindowHeight = Mathf.Max(WindowHeight, 305);
-                GUI.Label(new Rect(WindowWidth / 2, WindowHeight - 26, WindowWidth / 2 - 26, 26), $"Resizing: {WindowHeight * BDArmorySettings.UI_SCALE}", Label);
+                if (BDArmorySettings.DEBUG_OTHER) GUI.Label(new Rect(WindowWidth / 2, WindowHeight - 26, WindowWidth / 2 - 26, 26), $"Resizing: {Mathf.Round(WindowHeight * BDArmorySettings.UI_SCALE)}", Label);
             }
             #endregion
 
